assets/css/style.css
/* ... */
@media screen and (max-width: 767px) {
  h1 {
    font-size: 69px;
  }

  h2 {
    font-size: 60px;
  }

  h3 {
    font-size: 26px;
  }

  h4 {
    font-size: 24px;
  }

  h5 {
    font-size: 22px;
  }

  h6 {
    font-size: 20px;
  }

  .main {
    padding-top: 40px;
  }

  .container-large {
    padding-left: 20px;
    padding-right: 20px;
  }

  .profile-name {
    margin-bottom: 16px;
    font-size: 28px;
  }

  .profile-bio {
    margin-bottom: 16px;
  }

  .hero-number {
    font-size: 50px;
  }

  .section {
    padding-top: 80px;
  }

  .experience-card {
    padding: 16px 8px;
  }

  .experience-card-content-wrap {
    max-width: 380px;
  }

  .project-card {
    padding: 12px 8px;
  }

  .project-card-image {
    width: 90px;
    height: 93px;
    margin-right: 12px;
  }

  .tool-card {
    padding-left: 8px;
    padding-right: 8px;
  }

  .tools-collection-list {
    grid-template-columns: 1fr 1fr;
  }

  .blog-post-card {
    padding: 16px 8px;
  }

  .blog-post-card-content-wrap {
    max-width: 380px;
  }

  .footer {
    padding-left: 15px;
    padding-right: 15px;
  }

  .navbar {
    margin-top: 20px;
  }

  .line-illustration {
    left: 0;
  }

  .fire-circle-illustration {
    top: 220px;
    left: -120px;
  }

  .rich-text h1 {
    font-size: 36px;
  }

  .rich-text h2 {
    font-size: 24px;
  }

  .sm-heading-1 {
    font-size: 42px;
  }

  .blog-sections-wrap {
    margin-bottom: 70px;
  }

  .skills-section .section-title {
    font-size: 56px;
  }

  .blog-section .section-title {
    font-size: 48px;
  }

  .tool-post-heading-wrap {
    margin-bottom: 20px;
  }

  .tool-post-image {
    width: 60px;
  }

  .project-post-content, .experience-post-content {
    margin-top: 20px;
  }

  .password-section {
    padding-left: 20px;
    padding-right: 20px;
  }

  .sm-heading-2 {
    font-size: 34px;
  }

  .licenses-section {
    grid-column-gap: 40px;
    grid-row-gap: 40px;
  }

  .container-medium {
    padding-left: 20px;
    padding-right: 20px;
  }

  .colors-grid {
    grid-template-columns: 1fr 1fr;
  }

  .tools-sections-wrap, .experience-sections-wrap {
    margin-bottom: 70px;
  }
}

@media screen and (max-width: 479px) {
  .profile-image {
    width: 100%;
    max-height: 100%;
  }

  .profile-name {
    font-size: 28px;
  }

  .social-links {
    grid-column-gap: 24px;
    grid-row-gap: 24px;
  }

  .hero-numbers-wrap {
    flex-flow: wrap;
    justify-content: center;
    align-items: center;
  }

  .hero-skills-cards-wrap {
    flex-flow: column;
  }

  .experience-card-icon {
    display: none;
  }

  .experience-card-content-wrap {
    max-width: 100%;
  }

  .project-card-icon {
    display: none;
  }

  .tools-collection-list {
    grid-template-columns: 1fr;
  }

  .blog-post-card-content-wrap {
    max-width: 100%;
  }

  .blog-post-card-icon {
    display: none;
  }

  .nav-menu-links {
    padding-left: 12px;
    padding-right: 12px;
  }

  .fire-circle-illustration {
    width: 240px;
    top: 190px;
    left: -150px;
  }

  .nav-link-content-wrap {
    padding: 4px;
  }

  .colors-grid {
    grid-template-columns: 1fr;
  }
}

#w-node-ea09f54b-6c86-cb74-7f08-6b7dab0d5da4-4672603f {
  grid-area: span 1 / span 1 / span 1 / span 1;
}

.hero-number-label {
    white-space: pre-line;
    text-align: left;
    margin: 0;
    line-height: 1.2;
}

